[gd_scene load_steps=4 format=3 uid="uid://cbch84qpqqah2"]

[ext_resource type="Texture2D" uid="uid://bi4txh7j6rv4" path="res://art/gun.png" id="1_8kao5"]
[ext_resource type="Script" path="res://gun.gd" id="1_mayfe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nl0bv"]
radius = 58.0

[node name="Gun" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_mayfe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nl0bv")

[node name="Pivot" type="Marker2D" parent="."]

[node name="Sprite2d" type="Sprite2D" parent="Pivot"]
unique_name_in_owner = true
position = Vector2(20, 7.50003e-09)
texture = ExtResource("1_8kao5")

[node name="ShootingPoint" type="Marker2D" parent="Pivot/Sprite2d"]
unique_name_in_owner = true
position = Vector2(4, -2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
